--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,5 +34,5 @@ jobs:
   #         username: ${{ secrets.DOCKERHUB_USERNAME }}
   #         password: ${{ secrets.DOCKERHUB_TOKEN }}
      
-      - name: Push image to Docker Hub
-        run: docker push chetouiiftikhar/frontoff-img:latest
+    #  - name: Push image to Docker Hub
+      #  run: docker push chetouiiftikhar/frontoff-img:latest
