--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
 jobs:
  
   CI:
-    runs-on: ubuntu-latest
+    runs-on: self-hostet
 
 
     steps:
@@ -19,20 +19,20 @@ jobs:
         run: docker build -t frontoff-img:${{ github.sha }} .
       - name: Verify image build
         run: docker images
-     # - name: Tag image for latest deployment (optional)
-     #   run: docker tag frontoff-img:${{ github.sha }} frontoff-img:latest
+      - name: Tag image for latest deployment (optional)
+        run: docker tag yahya184/frontoff-img:${{ github.sha }} yahya184/frontoff-img:latest
 
  
-  # CD: 
-  #   runs-on: self-hosted
-  #   needs: CI
+  CD: 
+   runs-on: self-hosted
+   needs: CI
   
-  #   steps:
-  #     - name: Login to Docker Hub (requires secret)
-  #       uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+   steps:
+     - name: Login to Docker Hub (requires secret)
+       uses: docker/login-action@v2
+       with:
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+         password: ${{ secrets.DOCKERHUB_TOKEN }}
      
-    #  - name: Push image to Docker Hub
-      #  run: docker push chetouiiftikhar/frontoff-img:latest
+     - name: Push image to Docker Hub
+       run: docker push yahya184/frontoff-img:latest
