--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,5 +15,19 @@ jobs:
         run: docker build -t project-img:${{ github.sha }} .
       - name: Verify image build
         run: docker images
-     # - name: Tag image for latest deployment (optional)
-       # run: docker tag project-img:${{ github.sha }} project
+      - name: Tag image for latest deployment (optional)
+        run: docker tag project-img:${{ github.sha }} project
+# push-to-dockerhub:
+  CD: 
+    runs-on: self-hosted
+    needs: CI
+  
+    steps:
+      - name: Login to Docker Hub (requires secret)
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+     
+      - name: Push image to Docker Hub
+        run: docker push yahya184/project-img:latest
