--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,13 +11,27 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
+      - name: Forcer Git à utiliser HTTP/1.1
+        run: git config --global http.version HTTP/1.1
+
+      - name: Augmenter le buffer HTTP de Git
+        run: git config --global http.postBuffer 524288000
+
+      - name: Fetch avec tentative répétée
+        run: |
+          for i in {1..3}; do
+            git fetch || { echo "Tentative $i échouée, attente de 15s"; sleep 15; }
+          done
 
       - name: Build Docker image
         run: docker build -t front-img:${{ github.sha }} .
-      
+
       - name: Verify image build
         run: docker images
-      
+
       - name: Tag image for latest deployment (optional)
         run: docker tag yahya184/front-img:${{ github.sha }} yahya184/front-img:latest
 
@@ -31,6 +45,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-     
+
       - name: Push image to Docker Hub
         run: docker push yahya184/front-img:latest
