--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,10 +20,11 @@ jobs:
       - name: Augmenter le buffer HTTP de Git
         run: git config --global http.postBuffer 524288000
 
-      - name: Fetch avec tentative répétée
+      # Ajouter une boucle de répétition manuelle pour gérer les échecs de `git fetch`
+      - name: Fetch avec tentative répétée (3 tentatives)
         run: |
           for i in {1..3}; do
-            git fetch || { echo "Tentative $i échouée, attente de 15s"; sleep 15; }
+            git fetch origin +refs/heads/front:refs/remotes/origin/front && break || { echo "Tentative $i échouée, attente de 30s"; sleep 30; }
           done
 
       - name: Build Docker image
