--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,13 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 1
+          fetch-depth: 0
 
       - name: Forcer Git à utiliser HTTP/1.1
         run: git config --global http.version HTTP/1.1
 
       - name: Augmenter le buffer HTTP de Git
-        run: git config --global http.postBuffer 524288000
+        run: git config --global http.postBuffer 1048576000  # 1 Go
 
       # Ajouter une boucle de répétition manuelle pour gérer les échecs de git fetch
       - name: Fetch avec tentative répétée (3 tentatives)
